# matplot-plugin-visual

./: .gitignore  README.md  pyproject.toml  requirements.txt  style_patch.py
examples/: demo_bar.py  demo_bar_style_patch.py  demo_boxplot.py  demo_cdf.py  demo_line.py  demo_pie.py  demo_scatter.py
mpl_visual_editor/: __init__.py  editor.py  exporter.py  fills.py  inspector.py  refs.py  shapes.py  snapshots.py  workflow.py
mpl_visual_editor/adapters/: __init__.py  arrow.py  axes.py  axis.py  bar.py  base.py  figure.py  fill.py  legend.py  line.py  patch.py  registry.py  scatter.py  shape.py  spine.py  text.py  unsupported.py  wedge.py
