[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl-visual-editor"
version = "0.1.0"
description = "A visual style editor for Matplotlib figures"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.8",
    "PySide6>=6.6",
]

[tool.setuptools.packages.find]
include = ["mpl_visual_editor*"]
